<resources>
    <string name="app_name">Flavorly</string>

    <string name="already">Already have an account?<u><font color='#2196F3'>Sign Ip</font></u></string>
    <string name="term"> I agree with <b>Terms &amp; Conditions</b></string>
    <string name="notalready"><font>Don’t have an account?</font></string>
    <string name="link1"><u><font color='#2196F3'>Sign Up</font></u></string>
    <string name="link2"><u><font color='#2196F3'>Sign In</font></u></string>
    <string name="con">By continue you agree to our\nTerms &amp; Privacy Policy</string>
    <string name="my_underlined_text"><u>My Posts</u></string>
    <string name="Forgot"><u>Forgot password</u></string>
    <string name="sanwitch">• 2 slices of your favorite bread (sourdough or brioche works great)\n• 2 slices of cheese (cheddar, Swiss, or a mix)\n• 2 tablespoons of butter, softened.</string>
    <string name="sanwitch1">1. Prepare the bread: Spread a thin, even layer of softened butter on one side of each bread slice.\n\n2. Assemble the sandwich: Place one slice of bread, butter-side down, in a non-stick skillet over medium-low heat. Lay the cheese slices on the bread. Place the second slice of bread on top, with the buttered side facing up.\n\n3. Grill to perfection: Cook for 2-3 minutes, or until the bottom is golden brown and the cheese begins to melt.\n\n4. Flip and finish: Carefully flip the sandwich and cook the other side for another 2-3 minutes until it is also golden brown and the cheese is fully melted and gooey.\n\n5. Serve: Remove from the skillet, slice in half diagonally, and serve immediately.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="notifications_settings">Notifications settings</string>
    <string name="privacy">Privacy</string>
    <string name="help">Help</string>
    <string name="report_bugs">Report bugs</string>
    <string name="app_info">App info</string>
    <string name="log_out">Log Out</string>
    <string name="profile">Profile</string>
    <string name="alex_foodie">Alex Foodie</string>
    <string name="alex_foodie432">Alex_Foodie432</string>
    <string name="saved">Saved</string>
    <string name="favourite">Favourite</string>
    <string name="history">History</string>
    <string name="flavorly">Flavorly</string>

</resources>