<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/My_primary"
    tools:context=".Sign_up">

    <ImageView
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:alpha="0.1"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="Sign Up"
            android:textStyle="bold"
            android:textColor="@color/My_Secondary"
            android:textSize="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:textColor="@color/My_Secondary"
            android:text="Welcome to Flavorly\nDiscover recipes, share your bites, and explore foodie \nfinds from around the world." />


        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_conrner"
            android:hint="username"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/Email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_conrner"
            android:hint="email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_conrner"
            android:hint="password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="20sp">

        </EditText>

        <EditText
            android:id="@+id/confim_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_conrner"
            android:hint="comfim password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="20sp">

        </EditText>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/My_Secondary"
            android:text="@string/term" />

        <Button
            android:id="@+id/btnsign_Up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/My_Secondary"
            android:fontFamily="@font/poppins"
            android:padding="10dp"
            android:text="Sign Up"
            android:textColor="@color/My_primary"
            android:textSize="20sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">


            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/My_Secondary" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="Sign Up with"
                android:textColor="@color/My_Secondary"
                android:textStyle="bold" />


            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/My_Secondary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="30dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="50dp"
                android:src="@drawable/google">
            </ImageView>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/facebook">
            </ImageView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:layout_marginStart="100dp"
                android:textColor="@color/My_Secondary"
                android:text="@string/notalready"/>

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textColor="@color/My_Accent"
                android:text="@string/link2"/>
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/My_Secondary"
            android:text="@string/con"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>